# VibeVoice-finetuning

./: .gitignore  pyproject.toml  training_command.bat
src/: data_vibevoice.py  finetune_vibevoice_lora.py
